# DIPfinal_Project

./: 编队实验.md
DIP_ws/: .ycm_extra_conf.py
DIP_ws/src/master_pkg/: CMakeLists.txt  package.xml
DIP_ws/src/master_pkg/launch/: formate.launch
DIP_ws/src/master_pkg/src/: keyControl.cpp  master.cpp  tcp_client.cpp
DIP_ws/src/slave_pkg/: CMakeLists.txt  package.xml
DIP_ws/src/slave_pkg/launch/: formate.launch
DIP_ws/src/slave_pkg/src/: server_node.cpp  slave (复件).cpp
